<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_height">

        <TextView
            android:id="@+id/dialog_filter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_big"
            android:text="@string/dialog_title_main_sample"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_filter_title"
            android:padding="@dimen/default_big"
            android:text="@string/filter_main_title"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_text" />

        <Button
            android:id="@+id/dialog_filter_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/default_big"
            android:text="@string/cancel" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_filter_hall"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/default_big"
                android:text="@string/by_hall"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/dialog_filter_schedule"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/default_big"
                android:text="@string/by_hour"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>