<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/navigate_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title"
            android:textStyle="bold"
            android:text="@string/add_toolbar"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_hall_selection"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title" />

        <Spinner
            android:id="@+id/add_meeting_hall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_schedule_selection"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title" />

        <Spinner
            android:id="@+id/add_meeting_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_subject"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title" />

        <EditText
            android:id="@+id/add_meeting_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_subject_sample"
            android:textSize="@dimen/text_normal"
            android:maxLines="1"
            android:scrollHorizontally="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_participants"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title" />

        <EditText
            android:id="@+id/add_meeting_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_participants_sample"
            android:textSize="@dimen/text_normal"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:scrollHorizontally="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_meeting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_button_margin"
        android:text="@string/add_meeting"
        style="@style/Widget.AppCompat.Button.Colored" />

</LinearLayout>