<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_height">

        <TextView
            android:id="@+id/dialog_filter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_big"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title"
            android:textStyle="bold"
            tools:text="@string/dialog_title_date_sample" />

        <Spinner
            android:id="@+id/dialog_filter_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_filter_title"
            android:layout_margin="@dimen/default_big"
            android:padding="@dimen/default_big" />

        <Button
            android:id="@+id/dialog_filter_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/default_big"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/dialog_filter_accept"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/default_big"
            android:text="@string/filter"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

</RelativeLayout>