<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/navigate_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_arrow_back_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/detail_toolbar"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/detail_meeting_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_hall_selection"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_meeting_hall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_normal"
                    android:layout_marginEnd="@dimen/default_normal"
                    tools:text="Mario" />

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting_schedule_date_selection"
                android:textColor="@color/black"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_meeting_schedule_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_normal"
                android:layout_marginEnd="@dimen/default_normal"
                tools:text="01/01/2020" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_schedule_time_selection"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_meeting_schedule_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_normal"
                    android:layout_marginEnd="@dimen/default_normal"
                    tools:text="7h" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_subject"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_meeting_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_normal"
                    android:layout_marginEnd="@dimen/default_normal"
                    tools:text="Que va t-on manger ?" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_participants"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_meeting_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_normal"
                    android:layout_marginEnd="@dimen/default_normal"
                    tools:text="@string/meeting_participants_sample" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/detail_meeting_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Veuillez selectionner ou creer une reservation d'une salle de reunion"
            android:textAlignment="center"
            android:padding="28dp"
            android:visibility="visible"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>